--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -35,7 +35,8 @@ app-dashboard {
   }
 
   .message-container {
-    width: 100%;
+    margin-left: 16px;
+    //width: 80%;
   }
 
   .message-detail {
@@ -438,19 +439,6 @@ app-dashboard {
     background-color: red;
   }
 
-  //I hard coded this for mobile
-  .person-card {
-    //max-width: 375px;
-    //max-height: 174px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin: 0 5px;
-    display: flex;
-    flex-direction: row;
-    padding: 12px;
-  }
-
   .person-avatar {
     width: 100px !important;
     height: 100px !important;
@@ -512,7 +500,12 @@ app-dashboard {
     color: var(--ion-color-darkgrey);
   }
 
-  .complete-profile-banner {
+  .profile-row {
+    padding: 6px 0;
+  }
+
+  .profile-card {
+    width: 100%;
     margin: 0 5px;
     padding: 10px 0;
   }
@@ -592,8 +585,10 @@ app-dashboard {
     z-index: 15;
   }
 
-  .content-card {
-    background-color: var(--ion-color-secondary);
+  .mobile-card {
+    box-shadow: none;
+    border-radius: 0;
+    margin: 0;
   }
 
   .relationship-slide {
@@ -605,8 +600,7 @@ app-dashboard {
     height: 146px;
     width: 120px;
     margin: 0 3%;
-    //box-shadow: none;
-    //border-radius: 0;
+
   }
 
   .relationship-photo-container {
@@ -653,13 +647,25 @@ app-dashboard {
     color: var(--ion-color-dark);
   }
 
+  .desktop-content {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
   .content-container {
-    margin: 0 auto;
+    margin: 5px auto;
     max-width: 936px;
   }
 
   .content-grid {
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
+  }
+
+  .completed_percentage {
+    //width: 40px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    color: var(--ion-color-button1);
   }
 }
