Calvin's version of the Me page
1.8.3 (1)

--- a/src/app/pages/user/completeprofile/completeprofile.page.scss
+++ b/src/app/pages/user/completeprofile/completeprofile.page.scss
@@ -51,4 +51,8 @@ app-completeprofile {
     line-height: 12px;
     color: var(--ion-color-darkgrey);
   }
+
+  .opacity {
+    opacity: 0.4;
+  }
 }
