--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -455,7 +455,7 @@ app-dashboard {
   }
 
   .person-edit-profile {
-    //width: 183px;
+    width: 183px;
     height: 26px;
     font-style: normal;
     font-weight: normal;
