--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -12,55 +12,55 @@
     <progress-bar [progress]="(userData.user.avatar ? 50 : 0) + (authService.incompleteOnboardProcess ? 0 : 50)" [color]="'#488aff'"></progress-bar>
   </ion-toolbar>
   <!-- Mandatory profile action buttons -->
-  <div class="mandatory-actions">
+  <div class="mandatory-actions" *ngIf="userData.user">
     <ion-card class="title-reminder">
       <small>Tip: Completing your setup helps you get the most out of Restvo</small>
     </ion-card>
-    <ion-card *ngIf="userData.user && !userData.user.avatar">
+    <ion-card (click)="openUserProfile()" [ngClass]="{'opacity': userData.user && userData.user.avatar}">
       <ion-item lines="none" class="card-item">
         <ion-img class="icon" src="assets/icon/user.svg" alt="" slot="start"></ion-img>
         <div>
           <ion-label class="action-card-label" color="dark">Upload a Profile Photo</ion-label>
           <div class="action-card-message">Let other users see who they’re connecting with</div>
         </div>
-        <ion-img class="plus" src="assets/icon/plus.svg" alt="" slot="end"></ion-img>
+        <ion-icon [name]="userData.user.avatar ? 'checkmark-circle' : 'add-circle'" slot=end [color]="userData.user.avatar ? 'success' : 'danger'"></ion-icon>
       </ion-item>
     </ion-card>
-    <ion-card *ngIf="userData.user && authService.incompleteOnboardProcess">
+    <ion-card [ngClass]="{'opacity': userData.user && !authService.incompleteOnboardProcess}">
       <ion-item lines="none" class="card-item" (click)="authService.openOnboarding({ modalPage: true })">
         <ion-img class="icon" src="assets/icon/quotation.svg" alt="" slot="start"></ion-img>
         <div>
           <ion-label class="action-card-label" color="dark">Complete Your Profile</ion-label>
           <div class="action-card-message">Answer a few questions to complete your profile</div>
         </div>
-        <ion-img class="plus" src="assets/icon/plus.svg" alt="" slot="end"></ion-img>
+        <ion-icon [name]="!authService.incompleteOnboardProcess ? 'checkmark-circle' : 'add-circle'" slot=end [color]="!authService.incompleteOnboardProcess ? 'success' : 'danger'"></ion-icon>
       </ion-item>
     </ion-card>
   </div>
 
   <!-- Optional profile action buttons -->
-  <div class="optional-actions" [hidden]="((userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder) && (!platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder)">
+  <div class="optional-actions"><!-- [hidden]="((userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder) && (!platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder)">-->
     <ion-card class="title-reminder">
       <small>Optional:</small>
     </ion-card>
-    <ion-card [hidden]="(userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder">
+    <ion-card [ngClass]="{'opacity': (userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder}">
       <ion-item lines="none" class="card-item" (click)="requestPushNotificationPermission($event)">
         <ion-img class="icon" src="assets/icon/notification.svg" alt="" slot="start"></ion-img>
         <div>
           <ion-label class="action-card-label" color="dark">Enable Push Notifications</ion-label>
           <div class="action-card-message">Get notified when you recieve a new message or request</div>
         </div>
-        <ion-img class="plus" src="assets/icon/plus.svg" alt="" slot="end"></ion-img>
+        <ion-icon [name]="((userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder) ? 'checkmark-circle' : 'add-circle'" slot=end [color]="((userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder) ? 'success' : 'danger'"></ion-icon>
       </ion-item>
     </ion-card>
-    <ion-card [hidden]="!platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder">
+    <ion-card [ngClass]="{'opacity': !platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder}">
       <ion-item lines="none" class="card-item" (click)="pressImportContactList($event)">
         <ion-img class="icon" src="assets/icon/contact.svg" alt="" slot="start"></ion-img>
         <div>
           <ion-label class="action-card-label" color="dark">Import Your Contacts</ion-label>
           <div class="action-card-message">Find out who you know has already joined Restvo</div>
         </div>
-        <ion-img class="plus" src="assets/icon/plus.svg" alt="" slot="end"></ion-img>
+        <ion-icon [name]="(!platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder) ? 'checkmark-circle' : 'add-circle'" slot=end [color]="(!platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder) ? 'success' : 'danger'"></ion-icon>
       </ion-item>
     </ion-card>
   </div>
