--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -41,7 +41,7 @@
         {{userData.user.first_name}} {{userData.user.last_name}}
       </ion-label>
     </ion-item>
-    <ion-button *ngIf="!modalPage && userData.user" slot="end" fill="clear" (click)="openMyProfile()">
+    <ion-button *ngIf="!modalPage && userData.user && platform.width() < 768" slot="end" fill="clear" (click)="openMyProfile()">
       <ion-icon name="settings-outline"></ion-icon>
     </ion-button>
     <ion-buttons slot="end" *ngIf="!userData.user">
@@ -71,8 +71,8 @@
             <ion-card-title class="person-name">
               {{userData.user.first_name}} {{userData.user.last_name}}
             </ion-card-title>
-            <div class="person-title" [innerHTML]="userData.user.bio" ></div>
-            <ion-button shape="round" class="person-edit-profile" fill="outline" size="full" (click)="openMyProfile()" *ngIf="platform.width() < 768">Edit Profile</ion-button>
+            <div class="person-title" [innerHTML]="userData.user.bio"></div>
+            <ion-button shape="round" class="person-edit-profile" fill="outline" (click)="openMyProfile()" >Edit Profile</ion-button>
           </div>
         </ion-item>
       </ion-card>
