--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -33,12 +33,28 @@ app-dashboard {
     margin-top: 3px !important;
   }
 
-// THIS STYLE IS MINE
+// THESE STYLES ARE MINE
   .person-photo {
     width: 160px;
     height: 160px;
-    margin-top: 10px;
+    margin-top: 5px;
   }
+
+  .person-description {
+    font-size: 14px;
+    font-family: serif;
+    color: #545454;
+  }
+
+  .edit-profile {
+    color: #E2666A;
+    border: 1px solid #E2666A;
+    border-radius: 10px;
+    padding: 6px;
+    font-size: 12px;
+  }
+
+  // END OF MY STYLES
 
   .message-container {
     width: 100%;
@@ -448,9 +464,8 @@ app-dashboard {
 
   .person-card {
     border-radius: 1px;
-    max-width: 300px;
-    width: 80%;
-    height: 100%;
+    width: 40%;
+    height: 32%;
     //max-height: 200px;
     object-fit: contain;
     margin: 0 12px;
@@ -488,7 +503,6 @@ app-dashboard {
 
   .person-content {
     background-color: whitesmoke;
-    height: 200px;
     overflow: scroll;
     --background: var(--ion-color-light);
   }
@@ -498,14 +512,18 @@ app-dashboard {
   }
 
   .person-content-left {
-    margin: 8px 12.5px 21px 0;
+    margin: 8px 12.5px -21px 0;
     width: 40%;
     height: 200px;
     line-height: 100%;
   }
 
   .person-name {
-    font-size: 14px;
+    font-size: 24px;
+    color: black;
+    font-weight: 600;
+    font-family: serif;
+    padding-bottom: 15px;
   }
 
   .person-title {
@@ -519,15 +537,13 @@ app-dashboard {
   }
 
   .person-content-right {
-    padding-left: 12.5px;
-    margin: 10px 0 21px 0;
-    width: 60%;
-    height: 42px;
-    //max-height: 72px;
-    line-height: 14px; /* Height / no. of lines to display */
-    overflow: hidden;
-    font-size: 12px;
-    color: var(--ion-color-darkgrey);
+    padding: 0 3% 10% 12%;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    width: 80%;
+    height: 78%;
   }
 
   .section {
