--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -535,6 +535,10 @@ app-dashboard {
     }
   }
 
+  .section-card {
+    height: 100%;
+  }
+
   .program-slides {
     padding: 0 5px 10px 0;
     background-color: var(--ion-color-secondary);
@@ -552,7 +556,7 @@ app-dashboard {
   }
 
   .grid-program-card {
-    width: auto;
+    width: 133px;
     object-fit: contain;
     margin: 0 3%;
   }
